deploy/longhorn-scheduler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-scheduler
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: longhorn-scheduler
  template:
    metadata:
      labels:
        app.kubernetes.io/name: longhorn-scheduler
    spec:
      containers:
        - name: kube-scheduler
          command:
            - kube-scheduler
            - --config=/etc/kubernetes/scheduler-config.yaml
            - --leader-elect=true
            - --leader-elect-resource-name=longhorn-scheduler
            - --leader-elect-resource-namespace=$(NAMESPACE)
          image: registry.k8s.io/scheduler-plugins/kube-scheduler:v0.24.9
          imagePullPolicy: IfNotPresent
          startupProbe:
            failureThreshold: 24
            httpGet:
              path: /healthz
              port: 10259
              scheme: HTTPS
          livenessProbe:
            failureThreshold: 8
            httpGet:
              path: /healthz
              port: 10259
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10259
              scheme: HTTPS
          volumeMounts:
            - mountPath: /etc/kubernetes
              name: scheduler-config
        - name: longhorn-scheduler-extender
          image: blampe/longhorn-scheduler:0.0.1
          imagePullPolicy: IfNotPresent
          args:
            - --verbose=true
      serviceAccountName: longhorn-scheduler
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - configMap:
            defaultMode: 420
            name: longhorn-scheduler
          name: scheduler-config
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: longhorn-scheduler
