deploy/longhorn-scheduler-admission.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-scheduler-admission
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: longhorn-scheduler-admission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: longhorn-scheduler-admission
    spec:
      containers:
        - name: longhorn-scheduler-admission
          image: blampe/longhorn-scheduler:0.0.1
          imagePullPolicy: IfNotPresent
          command: ["/longhorn-scheduler-admission"]
          args:
            - -scheduler=longhorn
            - -tls-cert-file=/usr/local/certificates/cert
            - -tls-key-file=/usr/local/certificates/key
          volumeMounts:
            - mountPath: /usr/local/certificates/
              name: webhook-cert
              readOnly: true
      serviceAccountName: longhorn-scheduler-admission
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: webhook-cert
          secret:
            secretName: longhorn-scheduler-admission
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: longhorn-scheduler-admission
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-scheduler-admission
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: longhorn-scheduler-admission
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: longhorn-scheduler-admission
webhooks:
  - name: longhorn-scheduler-admission.linbit.com
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: kube-system
        name: longhorn-scheduler-admission
        path: "/mutate"
        port: 8080
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    failurePolicy: Ignore
